# youtube_langgraph_agent

./: .env.example  .gitignore  README.md  formatted_transcription.json  main.py  main2.py  notes.md  pyproject.toml  rough.js
agents/agent1/: main.py  thumbnail_agent.py  title_desc_agent.py  transcript_agent.py  video_agent.py
agents/agent2/: main.py
agents/agent3/: audio_agent.py  images_agent.py  main.py  thumbnail_agent.py  title_desc_agent.py  transcript_agent.py  video_agent.py
agents/agent4/: audio_agent.py  images_agent.py  main.py  thumbnail_agent.py  title_desc_agent.py  transcript_agent.py  uploader_agent.py  video_agent.py
agents/agent5/: audio_agent.py  images_agent.py  input_agent.py  main.py  uploader_agent.py  video_agent.py
lib/: audio_stt.py  create_video2.py  create_video4.py  gemini_search.py  google_tts.py  simli_avatar.py  upload_to_yt.py
nodes/: audio_agent.py  avatar_video_agent.py  images_agent.py
test/: audio_stt.py  create_video3.py  create_video4.py  gemini_search.py  generate_detailed_transcript.py  simli_avatar.py  upload_to_yt.py  youtube_api1.py
youtube_api/: google_images.py  google_tts.py  test_video.py  youtube_api2.py
